backup: add malilib GUI entry points